[tool.poetry]
name = "lumiera"
version = "0.1.3"
description = "Swiss‑army toolbox CLI (successor to pythonKitchen)"
authors = ["Suhail <suhailece@gmail.com>"]
readme = "README.md"
packages = [{include = "lumiera", from = "src"}]

[tool.poetry.scripts]
lumiera = "lumiera.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
oauthmanager = "^0.1.1"
tabulate = "^0.9.0"
pandas = "^2.2.3"
requests = "^2.32.3"
browser-cookie3 = "^0.20.1"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.13.4"
selenium = "^4.31.0"
webdriver-manager = "^4.0.2"
openai = "^1.76.0"
pillow = "^11.2.1"
pytesseract = "^0.3.13"
python-dotenv = "^1.1.0"
pypdf = "^5.5.0"
notion-client = "^2.3.0"

[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"
twine = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
